# kim-hosting-test

./: .dockerignore  .env.example  .gitignore  25_8_25_KIM_Reifegradanalyse.html  CLAUDE.md  Dockerfile  Readme.md  SETUP.md  backend.py  fly-deploy.sh  fly-launch.sh  fly.toml  ms_ews_email.py  ms_ews_email_env.py  pyproject.toml  requirements.txt  run_dev.py  start.sh  test_email.py
static/: Service_KI_Reifegrad_Assessment_v3.html  index.html
